fixed logo z-index

--- a/shared.scss
+++ b/shared.scss
@@ -54,7 +54,7 @@ header {
   border-radius: 2rem;
   transform: rotateZ(-5deg);
   font-family: "Nunito", sans-serif;
-  z-index: 300;
+  z-index: 201;
   opacity: 80%;
 }
 
@@ -191,7 +191,7 @@ ul {
   // display: none;
   position: fixed;
   background: #0b0c10;
-  z-index: 101;
+  z-index: 300;
   border-radius: 0px 0px 10px 10px;
   top: 0;
   left: 0;
